MN-11: Added address model and user relation
